docs: 프로젝트 기능 확장 및 고도화 내용 반영 (README.md)